# anomaly-detection

./: .gitignore  README.md  add_name.py  main.py  pyproject.toml
anomaly_detection/: __init__.py  main.ipynb  main.py  mainold.py  preprocess.py
anomaly_detection/configs/: models_configs.toml  training_configs.toml
anomaly_detection/data/: base_data.py  dataset.py  hdfs_data.py  hdfs_dataset.py  hdfs_series.py  hdfs_utils.py  text_data.py
anomaly_detection/models/: decoder_v1.py  decoder_v2.py  decoder_v3.py  decoder_v4.py  decoder_v5.py  decoder_v6.py  decoder_v7.py  deeplog.py  enhanceddl.py  loganomaly.py  transformerdl.py
anomaly_detection/models/modules/: computation.py  (+4 more)
anomaly_detection/optimizers/: __init__.py  adamw.py  base.py
anomaly_detection/series/: __init__.py  _example_plotting_series.py  _example_series.ipynb  base_time_series.py  events_time_series.py  point_process_time_series.py  utils.py
anomaly_detection/trainers/: trainer.py
anomaly_detection/utils/: configs.py  data.py  io_utils.py  math.py  math_utils.py  models.py  paths.py  string_utils.py  tensors.py  torch.py  torch_utils.py  train.py
checkpoints/DeepLog_original_45yNr/: checkpoint_0.pth
checkpoints/DeepLog_original_zRzrQ/: checkpoint_900.pth
logs/DeepLog_original_45yNr/: events.out.tfevents.1710974759.Piergiuseppes-MacBook-Pro.local.33067.0
logs/DeepLog_original_zRzrQ/: events.out.tfevents.1710974924.Piergiuseppes-MacBook-Pro.local.40076.0  (+1 more)
slurm/: cacel.sh  clean_up.sh  j_main.sh  logs.sh  main-1706835.err  main-1706836.err  main-1706836.out  queue.sh  submit.sh
(+2 files in other folders)
