[tool.poetry]
name = "anomaly-detection"
version = "0.1.0"
description = ""
authors = ["Piergiuseppe Mallozzi <piergiuseppe.mallozzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
torch = "^2.2.1"
matplotlib = "^3.8.3"
plotly = "^5.20.0"
jupyterlab = "^4.1.5"
nbformat = "^5.10.3"
ipywidgets = "^8.1.2"
notebook = "^7.1.2"
torchviz = "^0.0.2"
torchinfo = "^1.8.0"
torchview = "^0.2.6"
onnx = "^1.15.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
